feat: 提交当前阶段前后端优化与移动端兼容修复